@@ -1,3 +1,7 @@
+2008-01-14  Ankit Jain  <jankit@novell.com>
+
+	* MonoDevelop.Projects/DotNetProject.cs: Add missing null-check.
+
 2008-01-11  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Projects/DotNetProject.cs: Set an attribute on the project
